external-crates/move/crates/move-compiler/tests/move_2024/parser/mut_field_pun_invalid_assign.move
module a::m {
    public struct S has drop { f: u64 }

    public fun foo(s: S) {
        let _f = 0;
        S { mut f } = s;
    }
}
